Incorporated user access policies

--- a/war/resources/data/html/style/server.css
+++ b/war/resources/data/html/style/server.css
@@ -129,7 +129,8 @@ a.menu:focus {border: 0px; color: #0E0B39; text-decoration:none; }
 #t1 { width: 75px;  text-decoration:none;}
 #t2 { width: 75px;  text-decoration:none;}
 #t3 { width: 75px;  text-decoration:none;}
- 
+#t4 { width: 75px;  text-decoration:none;}
+
 .submenu {
 	position:absolute;
   	z-index: 2;
