--- a/war/resources/data/html/style/server-alt.css
+++ b/war/resources/data/html/style/server-alt.css
@@ -232,7 +232,6 @@ td.listing {
   border-spacing: 0px;
   padding: 0px;
   width: 225px;
-  border-right: 1px solid #BCBCBC;
 }
 
 
@@ -279,7 +278,7 @@ td.form_container {
 
 table.form_frame {
   background: #FFFFFF;
-  border: 1px solid #A7D7F9;
+/*  border: 1px solid #A7D7F9; */
   border-spacing: 0px;
   padding: 10px;
   width: 100%;
@@ -290,13 +289,19 @@ td.form_label {
   font-weight: bold;
   padding-bottom: 10px;
   padding-top: 10px;
-  width: 125px;
+}
+
+th.form_label {
+  border-spacing: 0px;
+  font-weight: bold;
+  padding-bottom: 10px;
+  text-align: left;
 }
 
 td.form_control {
   border-spacing: 0px;
   padding-bottom: 10px;
-  padding-left: 10px;
+  /*padding-left: 10px;*/
   padding-top: 10px;
 }
 
@@ -306,7 +311,7 @@ td.form_message {
   border-spacing: 0px;
   color: #F00000;
   padding-bottom: 10px;
-  padding-left: 10px;
+  /*padding-left: 10px;*/
   padding-top: 10px;
 }
 
@@ -314,7 +319,7 @@ td.form_text {
   border-spacing: 0px;
   font-weight: normal;
   padding-bottom: 10px;
-  padding-left: 10px;
+  /*padding-left: 10px;*/
   padding-top: 10px;
 }
 
